添加扩展管理
