# pkg/lakego-app/doak-extension/extension/route/route.go
@@ -12,9 +12,10 @@ func Route(engine gin.IRouter) {
     extController := new(controller.Extension)
     engine.GET("/extension", extController.Index)
     engine.GET("/extension/local", extController.Local)
-    engine.POST("/extension/install", adminController.Inatll)
-    engine.DELETE("/extension/uninstall", extController.Uninstall)
-    engine.PUT("/extension/upgrade", adminController.Upgrade)
-    engine.PATCH("/extension/enable", adminController.Enable)
-    engine.PATCH("/extension/disable", adminController.Disable)
+    engine.POST("/extension/:name/install", extController.Inatll)
+    engine.DELETE("/extension/:name/uninstall", extController.Uninstall)
+    engine.PUT("/extension/:name/upgrade", extController.Upgrade)
+    engine.PATCH("/extension/:name/sort", extController.Listorder)
+    engine.PATCH("/extension/:name/enable", extController.Enable)
+    engine.PATCH("/extension/:name/disable", extController.Disable)
 }
